--- a/style.css
+++ b/style.css
@@ -151,3 +151,32 @@ button:hover {
   font-size: 23px;
   letter-spacing: normal;
 }
+
+.smallInput{
+  width: 100px;
+  border: none;
+  border-bottom: 2px solid #eba834;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  text-align: center;
+  font-family: 'Readex Pro', sans-serif;
+}
+
+.inputWrapper{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 25px;
+}
+
+.checkboxWrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkboxSubtitle{
+  font-family: 'Outfit', sans-serif;
+  font-size: 15px;
+}
