--- a/style.css
+++ b/style.css
@@ -180,3 +180,29 @@ button:hover {
   font-family: 'Outfit', sans-serif;
   font-size: 15px;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.projectsWrapper{
+  width: 500px;
+  display: flex;
+  justify-content: center;
+  column-gap: 15px;
+  align-items: center;
+}
+
+.footerProj{
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
